# NeighbanDastak

./: .gitignore  README.md  SETTINGS_MODIFICATION_SUMMARY.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260315_0001_foundation.py  20260315_0002_patients.py  20260315_0003_appointments_visits.py  20260316_0004_audit_logs.py  20260317_0005_users.py  20260317_0006_prescriptions.py  20260317_0007_queue_system.py  20260317_0008_follow_ups.py  20260319_0009_audit_actor_id.py
backend/app/: main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  rbac.py
backend/app/db/: base.py  session.py
backend/app/repositories/: analytics_repository.py  appointment_repository.py  audit_log_repository.py  follow_up_repository.py  patient_repository.py  prescription_repository.py  queue_repository.py  timeline_repository.py  user_repository.py  visit_repository.py
backend/app/schemas/: auth.py  (+10 more)
backend/nigehbaan_dastak_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: TESTING_GUIDE.md  TEST_RESULTS_SUMMARY.md  conftest.py  run_modular_tests.py  test_analytics.py  test_appointments_visits.py  test_audit_service_unit.py  test_auth_api.py  test_clinic_comprehensive.py  test_demo_auth.py  test_follow_ups.py  test_health.py  test_integration_flows.py  test_patient_timeline.py  test_patients.py  test_prescriptions.py  test_queue.py  test_rate_limit.py  test_rate_limiter_unit.py  test_schema_validation.py  test_security_audit.py
(+78 files in other folders)
